--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
+    <title>Horiseon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
 </head>
 
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+    <!--start top nav-->
+    <header class="header">
+        <h1>
+            Hori<span class="seo">seo</span>n
+        </h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,8 +25,11 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
+    <!--end top nav-->
+
+    <!--start hero section-->
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
