--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             </p>
         </div>
     </div>
+    <!--end hero section-->
+   
+    <!--start benefits section-->
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -77,12 +80,16 @@
             </p>
         </div>
     </div>
+    <!--end benefits section-->
+    
+    <!--start footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </div>
+    <!--end footer-->
 </body>
 
 </html>
