changed hero div to section tag, fixed content with relative positioning

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!--end top nav-->
 
     <!--start hero section-->
-    <div class="hero"></div>
+    <section class="hero"></div>
         <article class="content">
             <div id="search-engine-optimization" class="content-images">
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="a notepad showing all the valuable things Horiseon does to make your content more visible on the internet"/>
@@ -54,7 +54,7 @@
                 </p>
             </div>
         </article>
-    </div>
+    </section>
     <!--end hero section-->
    
     <!--start benefits section-->
